# dynamics_inference

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHIRAL_METAMATERIAL_INTEGRATION.md  DRIVING_FORCE_README.md  INFERENCE_IMPLEMENTATION.md  LICENSE  README.md  RESTRUCTURING_SUMMARY.md  SWARMALATOR_RESTRUCTURING_SUMMARY.md  environment.yml  main.py  pyproject.toml  test_chiral_metamaterial_integration.py  test_lattice_hamiltonian.py  test_workflow.py
configs/: chiral_metamaterial.yaml  complete_pipeline.yaml  config.yaml  gravitation.yaml  lattice_hamilton_driven.yaml  lattice_hamilton_driven_2sites.yaml  lattice_hamilton_driven_position.yaml  lattice_hamiltonian.yaml  swarmalator.yaml
configs/dynamics/: gravitation.yaml  swarmalator.yaml
configs/visualizer/: blender.yaml  matplotlib.yaml
dynamics/: base.py  gravitation.py  swarm_torch.py  swarmalator.py  system.py
figs/: model.pt
gadynamics/: main.py
gadynamics/configs/: config.yaml
gadynamics/configs/dynamics/: GA_general.yaml  GA_lorenz.yaml  gravitation.yaml  swarmalator.yaml  swarmalator_breathing.yaml
gadynamics/configs/engine/: ode_solver.yaml  ode_solver_short.yaml
gadynamics/dynamics/: base.py  gravitation.py  interacting_GA.py  swarmalator.py  swarmalator_breathing.py  system.py
gadynamics/inference/: GA_inference.py  base.py  test_inference.py
gadynamics/inference/evaluation/: get_metrics.py  make_figures.py
gadynamics/inference/feature_library/: base.py  monomial_poly_library.py  orthogonal_poly_library.py
gadynamics/simulation/: ode_solve_engine.py
gadynamics/visualizer/: blender_script.py  imgui.ini  polyscope_visualizer.py  temporal_graph_matplotlib.py  visualize_dynamics.py
inference/: GA_inference.py  base.py
inference/feature_library/: base.py  orthogonal_poly_library.py  polynomial_library.py
inference/utils/: axes.py  polynomial_fits.py
notebooks/: SDE_Inference.nb  algebra_learning.ipynb  bayesian_glm.ipynb  geom_dynamics_learning.ipynb  infer_dynamics_metamaterial.ipynb  infer_dynamics_swarmalator.ipynb  ode_physics_learning.py  orthogonal_basis.ipynb  recapitulate_ex.ipynb  sparsity.ipynb  trefoil_dynamics.ipynb
simulation/: ode_solve_engine.py
src/data/: toy_examples.py
src/dynamo_infer/: __init__.py  workflow.py
src/models/: base_inference.py  bayesian_fitting.py  neural_ode_inference.py  sindy_lasso.py
src/utils/: polynomial_fits.py
tests/models/: test_bayesian_fitting.py  test_sindy_lasso.py
visualizer/: blender_particle_visualization.py  blender_script.py  blender_visualization.py  matplotlib_visualization.py  polyscope.py  visualize_dynamics.py
(+44 files in other folders)
